# KarVin-website

./: .breakpoints  LICENSE  README.md  api.py  app.py  database.py  pyproject.toml
templates/: Notes.html  Notes_nav.html  api.html  bootstrap.html  color.html  footer.html  home.html  iframe.html  nav.html  notes_page.html
