[tool.poetry]
name = "repl_nix_KarVin-website-1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
SQLAlchemy = "^2.0.5"
google-api-python-client = "^2.80.0"
google-auth-oauthlib = "^1.0.0"
ipython = "^8.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
